--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "author": "liangfengbo <itbo@163.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^3.3.0",
+    "element-ui": "^2.4.3",
+    "js-md5": "^0.7.3",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-ls": "^3.0.5",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
